解决第三个界面和第四个界面冲突问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">WordsHero</string>
     <string name="title_home">Home</string>
     <string name="title_chart">Chart</string>
-    <string name="title_message">Chat</string>
+    <string name="title_message">Message</string>
     <string name="title_about">About</string>
 
     <!-- TODO: Remove or change this placeholder text -->
